--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <title>Hello, world!</title>
   </head>
   <body>
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-8">
+
+        </div>
+      </div>
+    </div>
+
+
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#"><img src="/Assets/gogcom.png" style="height: 2rem;" alt="Logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,9 +38,12 @@
             <li class="nav-item">
               <a class="nav-link dropdown" href="#">ABOUT</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link dropdown" href="#">COMMUNITY</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Dropdown
+                SUPPORT
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="#">Action</a>
@@ -40,14 +52,16 @@
                 <a class="dropdown-item" href="#">Something else here</a>
               </div>
             </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
+            </ul>
+         
+        </div>
+        <div>
+          <i class="far fa-bell icons"></i>
+          <i class="fas fa-user-friends icons"></i>
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart4 icons" viewBox="0 0 16 16">
+            <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
+          </svg>
+          <i class="fas fa-search icons"></i>
         </div>
       </nav>
 <!-------------------------------------- Nav bar ends------------------------------------>
@@ -146,8 +160,8 @@
         <div class="row justify-content-center">
           <div class="col-8">
             <div class="row">
-              <div class="col-10"><p>We are GOG.COM,the <span class="purple-text">DRM-free</span> home for <span class="purple-text">curated selection</span> of games. This place was <span class="purple-text">made for gamers</span> so make yourself at home.</p></div>
-              <div class="col-2"><p>The New GOG Glaxy</p></div>
+              <div class="col-9"><small><p>We are GOG.COM,the <span class="purple-text">DRM-free</span> home for <span class="purple-text">curated selection</span> of games. This place was <span class="purple-text">made for gamers</span> so make yourself at home.</p></small></div>
+              <div class="col-3"><small><p>The New GOG Glaxy</p></div></small>
             </div>
           </div>
         </div>
